# family-shopping-dashboard

./: .env.example  .gitignore  CLAUDE.md  DOCKER.md  Makefile  docker-build.sh  docker-compose.yml
k8s/: DEPLOY.md  (+7 more)
services/api/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  alembic.ini  main.py  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 001_occasion_recurrence_and_type.py  002_person_occasions_join.py  003_person_anniversary.py  0cacb55807d0_add_budget_total_to_occasions.py  1d2e5f3c4b21_add_comment_visibility_and_gift.py  268c9faeabe7_gift_people_link.py  37835ac72a46_create_entity_budgets_table.py  3905b0fc62cd_create_field_options_table.py  39be0dfc7e1d_add_person_fields_per_prd.py  59b95e08971c_merge_heads.py  5d80cbe06073_add_budget_fields_to_personoccasion.py  6e0330de314e_add_price_discount_quantity_to_list_items.py  7a6f30d7b2b2_add_person_advanced_interests_and_size.py  8b7f5d2e1c5a_merge_gift_heads.py  a9a8b7496861_add_gift_from_santa_field.py  b1b18e1a4691_add_updated_at_to_gift_people.py  b2b770469096_add_purchaser_id_and_gift_person_role.py  be6fd164193f_add_activity_logs_table.py  ca7196997ff4_merge_all_heads.py  cf29065501d1_gift_model_expansion.py  d7b9b25e3eda_add_status_field_to_gift.py  df8e08cce5fd_seed_field_options_with_existing_values.py  e21fa4490d9d_groups_and_person_groups.py  e5004eebd18f_create_stores_table.py  e5d8200343c6_initial_schema.py  (+1 more)
services/api/app/: __init__.py  main.py
services/api/scripts/: README.md  populate_test_data.py  reset_dev_db.py
services/api/tests/: conftest.py
(+767 files in other folders)
